# IRL_DS_obstacle_avoidance

./: .gitignore  .gitignore~  README.md  informationKUKA8.778055.txt  informationKUKA8.838056.txt  informationKUKA8.849722.txt
gripper_c/: CMakeLists.txt  package.xml
gripper_c/include/: gripper_c.h
gripper_c/src/: gripper_c.cpp  gripper_c_node.cpp
include/: MotionGenerator.h  MouseInterface.h
matlab_gen/jar/: mouse_perturbation_robot-0.0.0.md5
mouse_perturbation_robot/: CMakeLists.txt  README.md  package.xml
mouse_perturbation_robot/cfg/: mouseInterface_params.cfg  obstacleAvoidance_params.cfg
mouse_perturbation_robot/include/: DSObstacleAvoidance.h  MotionGenerator.h
mouse_perturbation_robot/msg/: MouseMsgPassIRL.msg
mouse_perturbation_robot/src/: MotionGenerator.cpp  backandforth.cpp  elseOfmousecontrolledmotion.cpp  gripper_c.cpp  mouseInterface_node.cpp
msg/: MouseMsg.msg
obstacle_wih_sample_from_dynamics/: addpaths.m  obstacle_test.m  readme.md
obstacle_wih_sample_from_dynamics/Auglag/: auglag.m  auglagcost.m  auglagfindfeasible.m
obstacle_wih_sample_from_dynamics/FastHess/: gradprod.m  gradprodtr.m  hesssolve.m  linearsolve.m  tracehat.m  tracetilde.m  trajinfos.m
obstacle_wih_sample_from_dynamics/GPIRL/: gpirlcost.m  gpirldefaultparams.m  gpirlgpgrads.m  gpirlgpprior.m  gpirlhpprior.m  gpirlhppriorgrad.m  gpirlhpxform.m  gpirlpack.m  gpirlrun.m  gpirlsafeinv.m  gpirlunpack.m
obstacle_wih_sample_from_dynamics/General/: appendseries.m  (+27 more)
src/: DSObstacleAvoidance.cpp  MotionGenerator.cpp  MouseInterface.cpp  motionGenerator_node.cpp
(+51 files in other folders)
